--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -1,11 +1,14 @@
 # Server
 server:
   port: 80
+  address: 127.0.0.1
   servlet:
     session:
       timeout: 600
-      
+
+
 spring:
+
   messages.basename: i18n/messages
   
   datasource:
