--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,10 @@ server:
 
 
 spring:
-
+  devtools:
+    restart:
+      enabled: true
+      
   messages.basename: i18n/messages
   
   datasource:
