--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -11,14 +11,12 @@ spring:
   devtools:
     restart:
       enabled: true
-      
-  messages.basename: i18n/messages
   
   datasource:
     name: "app"
     driver-class-name: com.mysql.jdbc.Driver
-    url: "jdbc:mysql://192.168.0.31:3306/app?useSSL=false&characterEncoding=utf-8&useUnicode=true"
-    username: "lwj"
+    url: "jdbc:mysql://localhost:3306/app?useSSL=false&characterEncoding=utf-8&useUnicode=true"
+    username: "root"
     password: "lwj6TX006!"
     hikari:
       pool-name: "app-hikari-20"
