--- a/bin/main/lwj/app/config/init/messages.yml
+++ b/bin/main/lwj/app/config/init/messages.yml
@@ -1,4 +1,4 @@
-AppName --- 用户登录 --- 帐号 --- 密码 --- 确认密码 --- 忘记了密码？ --- 登录 --- 请输入正确的账号和密码！ --- 登出 --- 用户信息 --- 用户信息不存在！ --- 检索 --- 重置 --- 添加 --- 修改 --- 保存 --- 保存成功 --- 
+AppName{0} --- 用户登录 --- 帐号 --- 密码 --- 确认密码 --- 忘记了密码？ --- 登录 --- 请输入正确的账号和密码！ --- 登出 --- 用户信息 --- 用户信息不存在！ --- 检索 --- 重置 --- 添加 --- 修改 --- 保存 --- 保存成功 --- 
 保存失败，服务器发生异常！ --- 确认 --- 取消 --- 删除 --- 删除成功 --- 导出 --- 关闭 --- 是 --- 否 --- 自动生成 --- 描述 --- 登录日时 --- 请输入 --- 请选择 --- 请求处理中... --- 系统提示 --- 返回登录界面 --- 
 服务器连接超时，请重新登录 --- 因权限不足，无法访问该资源 --- 暂无数据 --- 登录者 --- 登录日时 --- 登录IP --- 更新者 --- 更新日时 --- 更新IP --- 全部 --- 选择 --- 可用 --- 不可用 --- 锁定 --- 未锁定 --- 过期 --- 
 未过期 --- 帐号CD --- 帐号ID --- 用户名称 --- 生日 --- 介绍 --- 照片 --- 是否可用 --- 是否锁定 --- 是否过期 --- 凭证是否过期 --- 密码和确认密码不一致！ --- 您输入的帐号ID已存在 --- 您输入的帐号ID可以使用
